WP-8572 Fixed the missed font size. Also fixed the responsive utility menu alignment.

--- a/css/conditionals/voices-detail.css
+++ b/css/conditionals/voices-detail.css
@@ -829,10 +829,12 @@
   }
 }
 .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body .file-resource-pull-quote {
+  width: 380px;
+}
+.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body .file-resource-pull-quote div {
   font-family: "NewsGothicBT-Light", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 24px;
   margin: 5px 30px 30px 0;
-  width: 380px;
 }
 
 .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right .field-academic-degrees,
